Update _Titanic Survival Prediction.ipynb

--- a/_Titanic Survival Prediction.ipynb
+++ b/_Titanic Survival Prediction.ipynb
@@ -19,10 +19,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import warnings\n",
-    "\n",
-    "# Faltu warnings ko ignore karne ke liye\n",
-    "warnings.filterwarnings('ignore')\n",
     "\n",
     "print(\"Libraries Imported Successfully!\")"
    ]
@@ -62,11 +58,9 @@
     }
    ],
    "source": [
-    "# Dataset ko download kiye bina direct URL se load karo\n",
     "dataset_url = \"https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv\"\n",
     "df = pd.read_csv(dataset_url)\n",
     "\n",
-    "# Check karo ki data sahi se load hua hai\n",
     "print(\"Data Loaded. First 5 rows:\")\n",
     "print(df.head())"
    ]
@@ -96,14 +90,13 @@
     }
    ],
    "source": [
-    "# 'PassengerId', 'Name', 'Ticket', aur 'Cabin' columns ki zaroorat nahi hai\n",
     "df = df.drop(['PassengerId', 'Name', 'Ticket', 'Cabin'], axis=1)\n",
     "\n",
-    "# 'Age' column mein jo data missing hai, usse median age se fill karo\n",
+    "#Age column mein jo data missing hai use median age se fill kara\n",
     "median_age = df['Age'].median()\n",
     "df['Age'] = df['Age'].fillna(median_age)\n",
     "\n",
-    "# 'Embarked' column mein 2 missing values hain, unhe 'S' (sabse common port) se fill karo\n",
+    "# Embarked column mein 2 missing values hain unhe S (sabse common port) se fill kara hai\n",
     "df['Embarked'] = df['Embarked'].fillna('S')\n",
     "\n",
     "print(\"\\nData Cleaned. Missing values check:\")\n",
@@ -132,10 +125,10 @@
     }
    ],
    "source": [
-    "# 'Sex' column ko 0 (male) aur 1 (female) mein convert karo\n",
+    "# Sex column ko 0 (male) aur 1 (female) mein convert kaarliya\n",
     "df['Sex'] = df['Sex'].map({'male': 0, 'female': 1})\n",
     "\n",
-    "# 'Embarked' column ko 0, 1, 2 mein convert karo\n",
+    "# Embarked column ko 0, 1, 2 mein convert kara hai \n",
     "df['Embarked'] = df['Embarked'].map({'S': 0, 'C': 1, 'Q': 2})\n",
     "\n",
     "print(\"\\nData Encoded. First 5 rows:\")\n",
@@ -231,10 +224,8 @@
     }
    ],
    "source": [
-    "# Model se kaho ki woh X_test data par predictions kare\n",
     "predictions = model.predict(X_test)\n",
     "\n",
-    "# Check karo ki predictions kitne sahi (accurate) hain\n",
     "accuracy = accuracy_score(y_test, predictions)\n",
     "\n",
     "print(f\"Final Model Accuracy: {accuracy * 100:.2f}%\")"
