Fix query to find longest running anime

--- a/Pandas Project/Anime_Feature_Extraction_Analysis.ipynb
+++ b/Pandas Project/Anime_Feature_Extraction_Analysis.ipynb
@@ -2114,7 +2114,7 @@
    "source": [
     "# which is the longest running anime\n",
     "\n",
-    "df[df['Duration'] == df['Duration'].max()][['Title','Duration','Score']]"
+    "df[df['Months'] == df['Months'].max()][['Title','Months','Score']]"
    ]
   }
  ],
