Update anime data in analysis notebook

--- a/Pandas Project/Anime_Feature_Extraction_Analysis.ipynb
+++ b/Pandas Project/Anime_Feature_Extraction_Analysis.ipynb
@@ -2099,11 +2099,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                Title             Duration  \\\n",
-       "21  Violet Evergarden MovieMovie (1 eps)Sep 2020 -...  Sep 2020 - Sep 2020   \n",
+       "                                                Title                                Duration  \\\n",
+       "11  Ginga Eiyuu DensetsuOVA (110 eps)Jan 1988 - Mar 1997309,193 members   Jan 1988 - Mar 1997     \n",
        "\n",
        "    Score  \n",
-       "21   8.89  "
+       "11   9.02  "
       ]
      },
      "execution_count": 81,
